# DynCursor

./: .gitignore  Cargo.toml  README.md
config/: config.yaml  log4rs.yaml
resources/cur/: aero_arrow_glow.cur  aero_link_glow.cur  beam_glow.cur
resources/figure/: arrow_r.cur  up_r.cur
src/: cursor.rs  ime.rs  main.rs  yaml_client.rs
z_lib/: Cargo.toml
z_lib/src/: lib.rs
z_lib/z_serde_yaml/: Cargo.toml
z_lib/z_serde_yaml/src/: lib.rs
